# chitchat.colbywest.dev

./: .env.example  .gitignore  README.md  dev.py  docker-compose.yml  first.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  001_baseline.sql
backend/app/: db.py  deps.py  events.py  main.py  models.py  orchestrator.py  rqueue.py  schemas.py  security.py  settings.py  storage.py  transcription.py  ws.py
backend/app/routers/: agents.py  auth.py  conversations.py  projects.py  recordings.py  runs.py  tasks.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/analytics/: AgentPerformanceChart.tsx  AreaChart.tsx  MetricCard.tsx  SparklineChart.tsx  StatusDistribution.tsx  TaskThroughputChart.tsx  index.ts
frontend/components/auth/: AuthGate.tsx  LoginForm.tsx
frontend/components/dashboard/: ChatPanel.tsx  KanbanBoard.tsx  LiveRunsPanel.tsx  OrchestratorControls.tsx  RecordingList.tsx  RunLogConsole.tsx  VoiceControls.tsx  index.ts
frontend/hooks/: index.ts  useKeyboard.ts  useMediaQuery.ts  useWebSocket.ts
frontend/lib/: api.ts  auth.ts  types.ts  websocket.ts
frontend/public/: manifest.json
frontend/stores/: authStore.ts  projectsStore.ts
frontend/styles/: globals.css
runner/: pyproject.toml
runner/runner/: api_client.py  config.py  executor.py  main.py  sandbox.py
(+35 files in other folders)
