[project]
name = "overmind-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "alembic==1.13.2",
  "psycopg[binary]==3.2.1",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-multipart==0.0.9",
  "bcrypt==4.2.0",
  "redis==5.0.8",
  "rq==1.16.2",
  "httpx==0.27.2",
  "pyyaml==6.0.2",
  "faster-whisper==1.0.3"
]

[tool.uv]
dev-dependencies = ["ruff==0.6.9"]
